# kt-prompt

./: .env.template  .gitignore  README.md  cli.py  config.py  final_results.md  kt_hackathon_cli.py  optimization_summary.md  pyproject.toml  requirements.txt  test_enhanced_error_handling.py  test_error_handling.py  test_error_recovery_simple.py  test_gemini.py  test_gpt4o.py  test_system_local.py
best_prompt/: system_prompt_final.txt
docs/: ADVANCED_ERROR_HANDLING.md  API_REFERENCE.md  AUTO_OPTIMIZATION_GUIDE.md  ENHANCED_MONITORING.md  EXAMPLES.md  STRATEGY_MANAGER.md  TROUBLESHOOTING.md
examples/: advanced_error_recovery_demo.py  enhanced_monitoring_demo.py  error_recovery_usage.py
gemini/: __init__.py  advanced_generator.py  cot_tester.py  few_shot_enhancer.py  gemini_tester.py  gpt4o_validator.py  optimized_tester.py  pro_analyzer.py  prompt_analyzer.py  result_analyzer.py  strategy_integration_example.py  strategy_manager.py  strategy_manager_demo.py
models/: __init__.py  data_models.py  exceptions.py
practice/: kt_llm.ipynb
prompt/: system_prompt_enhanced.txt  system_prompt_final_v2.txt  system_prompt_length_optimized.txt  system_prompt_optimized.txt  system_prompt_v1.txt  system_prompt_v1_enhanced.txt  system_prompt_v1_gemini_v1.txt  system_prompt_v2.txt
services/: accuracy_optimizer.py  advanced_parsing_handler.py  api_error_handler.py  auto_accuracy_optimizer.py  auto_length_optimizer.py  auto_optimization_summary.py  checkpoint_manager.py  csv_processor.py  error_recovery_system.py  gemini_client.py  gemini_flash_classifier.py  kt_score_monitor.py  (+11 more)
(+55 files in other folders)
